src/core/c_api/itscam_rest_client_c.h

/* ============================================================================
 *  Opaque handles
 * ============================================================================ */

typedef struct ITSCAM_RestClient ITSCAM_RestClient;
/// UTF-8 NUL-terminated string buffer owned by the SDK.
typedef struct ITSCAM_String ITSCAM_String;
/* ============================================================================
 *  Generic HTTP verbs (the typed helpers below are convenience wrappers)
 *
 *  All variants follow the same pattern:
 *      - path is taken verbatim
 *      - body (when applicable) is a UTF-8 JSON string
 *      - outResponse receives the parsed JSON response string (or NULL on
 *        failure); the caller must release it with ITSCAM_String_destroy
 * ============================================================================ */

ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpGet(
    ITSCAM_RestClient* client,
    const char* path,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpPut(
    ITSCAM_RestClient* client,
    const char* path,
    const char* jsonBody,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpPost(
    ITSCAM_RestClient* client,
    const char* path,
    const char* jsonBody,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_httpDelete(
    ITSCAM_RestClient* client,
    const char* path,
    uint32_t timeoutMs,
    ITSCAM_String** outResponse);
/* ============================================================================
 *  Typed convenience wrappers
 *
 *  These call the matching ItscamRestClient methods and return the JSON
 *  response through outResponse.
 * ============================================================================ */

ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getProfiles(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getProfile(
    ITSCAM_RestClient* client, int profileId, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_createProfile(
    ITSCAM_RestClient* client, const char* jsonProfile, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_updateProfile(
    ITSCAM_RestClient* client, const char* jsonProfile, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_deleteProfile(
    ITSCAM_RestClient* client, int profileId, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getVolatileInfo(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getGeneralConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setGeneralConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getAnalyticsConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setAnalyticsConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getOcrConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setOcrConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getClassifierConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setClassifierConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getLanesConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setLanesConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getItscamproConfig(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_setItscamproConfig(
    ITSCAM_RestClient* client, const char* jsonConfig, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_RestClient_getItscamproStatus(
    ITSCAM_RestClient* client, uint32_t timeoutMs,
    ITSCAM_String** outResponse);
/* ============================================================================
 *  Logging
 * ============================================================================ */

ITSCAM_C_API void ITSCAM_RestClient_onLog(
    ITSCAM_RestClient* client,
    ITSCAM_LogCallback callback,
    void* userData);
/* ============================================================================
 *  ITSCAM_String accessors
 * ============================================================================ */

ITSCAM_C_API const char* ITSCAM_String_data(const ITSCAM_String* s);
ITSCAM_C_API size_t      ITSCAM_String_size(const ITSCAM_String* s);
ITSCAM_C_API void        ITSCAM_String_destroy(ITSCAM_String* s);