src/wrappers/java/itscam-sdk/src/main/java/com/pumatronix/itscam/internal/ItscamLibrary.java


    int ITSCAM_RestClient_httpGet(Pointer client, String path,
                                  int timeoutMs,
                                  PointerByReference outResponse);
    int ITSCAM_RestClient_httpPut(Pointer client, String path,
                                  String jsonBody, int timeoutMs,
                                  PointerByReference outResponse);
    int ITSCAM_RestClient_httpPost(Pointer client, String path,
                                   String jsonBody, int timeoutMs,
                                   PointerByReference outResponse);
    int ITSCAM_RestClient_httpDelete(Pointer client, String path,
                                     int timeoutMs,
                                     PointerByReference outResponse);

    int ITSCAM_RestClient_getProfiles(Pointer client, int timeoutMs,
                                      PointerByReference outResponse);
    int ITSCAM_RestClient_getProfile(Pointer client, int profileId,
                                     int timeoutMs,
                                     PointerByReference outResponse);
    int ITSCAM_RestClient_createProfile(Pointer client, String jsonProfile,
                                        int timeoutMs,
                                        PointerByReference outResponse);
    int ITSCAM_RestClient_updateProfile(Pointer client, String jsonProfile,
                                        int timeoutMs,
                                        PointerByReference outResponse);
    int ITSCAM_RestClient_deleteProfile(Pointer client, int profileId,
                                        int timeoutMs,
                                        PointerByReference outResponse);

    int ITSCAM_RestClient_getVolatileInfo(Pointer client, int timeoutMs,
                                          PointerByReference outResponse);
    int ITSCAM_RestClient_getGeneralConfig(Pointer client, int timeoutMs,
                                           PointerByReference outResponse);
    int ITSCAM_RestClient_setGeneralConfig(Pointer client, String json,
                                           int timeoutMs,
                                           PointerByReference outResponse);
    int ITSCAM_RestClient_getOcrConfig(Pointer client, int timeoutMs,
                                       PointerByReference outResponse);
    int ITSCAM_RestClient_setOcrConfig(Pointer client, String json,
                                       int timeoutMs,
                                       PointerByReference outResponse);
    int ITSCAM_RestClient_getAnalyticsConfig(Pointer client, int timeoutMs,
                                              PointerByReference outResponse);
    int ITSCAM_RestClient_setAnalyticsConfig(Pointer client, String json,
                                              int timeoutMs,
                                              PointerByReference outResponse);
    int ITSCAM_RestClient_getClassifierConfig(Pointer client, int timeoutMs,
                                               PointerByReference outResponse);
    int ITSCAM_RestClient_setClassifierConfig(Pointer client, String json,
                                               int timeoutMs,
                                               PointerByReference outResponse);
    int ITSCAM_RestClient_getLanesConfig(Pointer client, int timeoutMs,
                                          PointerByReference outResponse);
    int ITSCAM_RestClient_setLanesConfig(Pointer client, String json,
                                          int timeoutMs,
                                          PointerByReference outResponse);
    int ITSCAM_RestClient_getItscamproConfig(Pointer client, int timeoutMs,
                                              PointerByReference outResponse);
    int ITSCAM_RestClient_setItscamproConfig(Pointer client, String json,
                                              int timeoutMs,
                                              PointerByReference outResponse);
    int ITSCAM_RestClient_getItscamproStatus(Pointer client, int timeoutMs,
                                              PointerByReference outResponse);

    void ITSCAM_RestClient_onLog(Pointer client, LogCallback cb,
                                 Pointer userData);

    // ITSCAM_String accessors
    String ITSCAM_String_data(Pointer s);
    long   ITSCAM_String_size(Pointer s);
    void   ITSCAM_String_destroy(Pointer s);

    // ====================================================================
    //  CGI client (ITSCAM_CgiClient)
    // ====================================================================

    Pointer ITSCAM_CgiClient_create();
    void    ITSCAM_CgiClient_destroy(Pointer client);

    int  ITSCAM_CgiClient_setBaseUrl(Pointer client, String host,
                                     short port, String scheme);
    void ITSCAM_CgiClient_setApiPrefix(Pointer client, String prefix);
    void ITSCAM_CgiClient_setCaCertFile(Pointer client, String pemPath);
    void ITSCAM_CgiClient_setCaCertData(Pointer client, String pem);
    void ITSCAM_CgiClient_setVerifyServerCertificate(Pointer client,
                                                      int verify);
    void ITSCAM_CgiClient_setClientCertificate(Pointer client,
                                                String certPem,
                                                String keyPem);

    int  ITSCAM_CgiClient_login(Pointer client, String username,
                                String password, int timeoutMs);
    void ITSCAM_CgiClient_setAuthToken(Pointer client, String token);
    void ITSCAM_CgiClient_clearAuthToken(Pointer client);
    void ITSCAM_CgiClient_setBasicAuth(Pointer client, String user,
                                        String password);
    void ITSCAM_CgiClient_clearBasicAuth(Pointer client);

    int ITSCAM_CgiClient_getLastFrame(Pointer client, int timeoutMs,
                                      PointerByReference outImage);
    int ITSCAM_CgiClient_getSnapshot(Pointer client,
                                     ITSCAMCgiSnapshotRequest request,
                                     int timeoutMs,
                                     PointerByReference outImages);
    int ITSCAM_CgiClient_startMjpegStream(Pointer client,
                                          CgiStreamCallback cb,
                                          Pointer userData,
                                          int timeoutMs);
    void ITSCAM_CgiClient_stopMjpegStream(Pointer client);
    int  ITSCAM_CgiClient_isMjpegStreamRunning(Pointer client);

    int ITSCAM_CgiClient_forceTrigger(Pointer client, int timeoutMs,
                                       PointerByReference outResponse);
    int ITSCAM_CgiClient_reboot(Pointer client, int timeoutMs,
                                 PointerByReference outResponse);

    void ITSCAM_CgiClient_onLog(Pointer client, LogCallback cb,
                                Pointer userData);

    // CgiImage / CgiImageArray accessors
    String  ITSCAM_CgiImage_mimeType(Pointer img);
    Pointer ITSCAM_CgiImage_data(Pointer img);
    long    ITSCAM_CgiImage_size(Pointer img);
    void    ITSCAM_CgiImage_destroy(Pointer img);

    long    ITSCAM_CgiImageArray_size(Pointer arr);
    Pointer ITSCAM_CgiImageArray_get(Pointer arr, long index);
    void    ITSCAM_CgiImageArray_destroy(Pointer arr);
}
